tests/config_module_system_node_root_relative_dirnames/config_module_system_node_root_relative_dirnames.exp
Error ----------------------------------------------------------------------------------------------------- test.js:14:2

Cannot cast `ambiguous` to empty because string literal `first_user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:14:2
   14| (ambiguous: empty)
        ^^^^^^^^^

References:
   first/ambiguous.js:1:14
    1| const value: "first_user_code" = "first_user_code";
                    ^^^^^^^^^^^^^^^^^ [1]
   test.js:14:13
   14| (ambiguous: empty)
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:2

Cannot cast `sub_ambiguous` to empty because string literal `first_user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:17:2
   17| (sub_ambiguous: empty)
        ^^^^^^^^^^^^^

References:
   first/subdir/ambiguous.js:1:14
    1| const value: "first_user_code" = "first_user_code";
                    ^^^^^^^^^^^^^^^^^ [1]
   test.js:17:17
   17| (sub_ambiguous: empty)
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:2

Cannot cast `user_code` to empty because string literal `first_user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:21:2
   21| (user_code: empty)
        ^^^^^^^^^

References:
   first/user_code.js:1:14
    1| const value: "first_user_code" = "first_user_code";
                    ^^^^^^^^^^^^^^^^^ [1]
   test.js:21:13
   21| (user_code: empty)
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:24:2

Cannot cast `sub_user_code` to empty because string literal `first_user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:24:2
   24| (sub_user_code: empty)
        ^^^^^^^^^^^^^

References:
   first/subdir/user_code.js:1:14
    1| const value: "first_user_code" = "first_user_code";
                    ^^^^^^^^^^^^^^^^^ [1]
   test.js:24:17
   24| (sub_user_code: empty)
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:28:2

Cannot cast `second_only_user_code` to empty because string literal `second_only_user_code` [1] is incompatible with
empty [2]. [incompatible-cast]

   test.js:28:2
   28| (second_only_user_code: empty)
        ^^^^^^^^^^^^^^^^^^^^^

References:
   second/second_only_user_code.js:1:14
    1| const value: "second_only_user_code" = "second_only_user_code";
                    ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:28:25
   28| (second_only_user_code: empty)
                               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:31:2

Cannot cast `sub_second_only_user_code` to empty because string literal `second_only_user_code` [1] is incompatible with
empty [2]. [incompatible-cast]

   test.js:31:2
   31| (sub_second_only_user_code: empty)
        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   second/subdir/second_only_user_code.js:1:14
    1| const value: "second_only_user_code" = "second_only_user_code";
                    ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:31:29
   31| (sub_second_only_user_code: empty)
                                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:2

Cannot cast `node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:35:2
   35| (node_code: empty)
        ^^^^^^^^^

References:
   node_modules/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:35:13
   35| (node_code: empty)
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:38:2

Cannot cast `sub_node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:38:2
   38| (sub_node_code: empty)
        ^^^^^^^^^^^^^

References:
   node_modules/subdir/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:38:17
   38| (sub_node_code: empty)
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:41:25

Cannot resolve module `nonexistent`. [cannot-resolve-module]

   41| import nonexistent from 'nonexistent'
                               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:42:29

Cannot resolve module `subdir/nonexistent`. [cannot-resolve-module]

   42| import sub_nonexistent from 'subdir/nonexistent'
                                   ^^^^^^^^^^^^^^^^^^^^



Found 10 errors
